--- a/package.json
+++ b/package.json
@@ -8,8 +8,32 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.7",
+    "@types/styled-system": "^5.1.10",
     "next": "10.0.6",
+    "polished": "^4.1.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "styled-components": "^5.2.1",
+    "styled-normalize": "^8.0.7",
+    "styled-reset": "^4.3.4",
+    "swr": "^0.4.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@styled-system/prop-types": "^5.1.5",
+    "@types/node": "^14.14.25",
+    "@types/react": "^17.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
+    "babel-plugin-inline-react-svg": "^1.1.2",
+    "babel-plugin-styled-components": "^1.12.0",
+    "eslint": "^7.19.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "file-loader": "^6.2.0",
+    "styled-system": "^5.1.5",
+    "typescript": "^4.1.3"
   }
 }
