--- a/package.json
+++ b/package.json
@@ -16,12 +16,11 @@
     "@sanity/client": "^2.8.0",
     "@sanity/image-url": "^0.140.22",
     "@sanity/types": "^2.8.0",
-    "@types/braintree-web": "^3.75.0",
+    "@types/google-map-react": "^2.1.0",
     "@types/react-dom": "^17.0.3",
     "@types/react-scroll": "^1.8.2",
     "@types/styled-components": "^5.1.9",
     "@types/styled-system": "^5.1.11",
-    "braintree-web": "^3.76.2",
     "framer-motion": "^4.1.6",
     "google-map-react": "^2.1.9",
     "lodash": "^4.17.21",
@@ -30,7 +29,6 @@
     "next-auth": "^3.14.8",
     "polished": "^4.1.1",
     "react": "17.0.1",
-    "react-braintree-fields": "^1.6.0",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.15.6",
     "react-intersection-observer": "^8.31.0",
