--- a/sanity/package.json
+++ b/sanity/package.json
@@ -25,6 +25,7 @@
     "react": "^17.0",
     "react-dom": "^17.0",
     "react-icons": "^4.2.0",
+    "sanity-plugin-asset-source-unsplash": "^0.1.3",
     "sanity-plugin-mapbox-input": "^0.0.3"
   },
   "devDependencies": {}
