--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@date-io/moment": "^1.3.13",
-    "@material-ui/core": "^4.11.3",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^5.0.0-beta.1",
     "@material-ui/pickers": "^3.3.10",
+    "@material-ui/styles": "^4.11.4",
     "@sanity/block-content-to-react": "^2.0.7",
     "@sanity/client": "^2.8.0",
     "@sanity/image-url": "^0.140.22",
@@ -49,6 +52,7 @@
     "@babel/core": "^7.13.15",
     "@styled-system/prop-types": "^5.1.5",
     "@types/lodash": "^4.14.168",
+    "@types/material-ui": "^0.21.9",
     "@types/node": "^14.14.41",
     "@types/react": "^17.0.3",
     "@types/react-transition-group": "^4.4.1",
