--- a/sanity/package.json
+++ b/sanity/package.json
@@ -8,7 +8,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "start": "sanity start",
-    "build": "sanity build"
+    "build": "sanity build public -y"
   },
   "keywords": [
     "sanity"
@@ -28,5 +28,7 @@
     "sanity-plugin-asset-source-unsplash": "^0.1.3",
     "sanity-plugin-mapbox-input": "^0.0.3"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@sanity/cli": "^2.13.0"
+  }
 }
