--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sanity/client": "^2.8.0",
     "@sanity/image-url": "^0.140.22",
     "@sanity/types": "^2.8.0",
+    "@sendgrid/mail": "^7.4.6",
     "@types/google-map-react": "^2.1.0",
     "@types/react-dom": "^17.0.3",
     "@types/react-scroll": "^1.8.2",
