--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "module": "esnext",
     "allowJs": true,
     "moduleResolution": "node",
@@ -16,24 +20,51 @@
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    // "isolatedModules": true,
     "jsx": "preserve",
     // "noUnusedLocals": true,
     // "noUnusedParameters": true,
     // "preserveConstEnums": true,
     // "removeComments": false,
-    "typeRoots": ["@types", "node_modules/@types"],
+    "typeRoots": [
+      "@types",
+      "node_modules/@types"
+    ],
     "baseUrl": ".",
     "paths": {
-      "@components/*": ["components/*"],
-      "@type/*": ["types/*"],
-      "@lib/*": ["lib/*"],
-      "@public/*": ["public/*"],
-      "@theme/*": ["theme/*"],
-      "@api/*": ["api/*"],
-      "@state/*": ["state/*"],
-    }
+      "@components/*": [
+        "components/*"
+      ],
+      "@type/*": [
+        "types/*"
+      ],
+      "@lib/*": [
+        "lib/*"
+      ],
+      "@public/*": [
+        "public/*"
+      ],
+      "@theme/*": [
+        "theme/*"
+      ],
+      "@api/*": [
+        "api/*"
+      ],
+      "@state/*": [
+        "state/*"
+      ]
+    },
+    "isolatedModules": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules", "backup", "serverless", "sanity", "api"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules",
+    "backup",
+    "serverless",
+    "sanity"
+  ]
 }
